# Experiments

./: House-Map.dot  LICENSE  README.md
TclTk/: .gitignore  Makefile  README_tcl_improvements.md  app.tcl  conversion.tcl  test.tcl  test_conversion.tcl
advent-of-code-2023/: Cargo.toml  README.md
advent-of-code-2023/src/: libaoc.rs
algebraic-operator/: PROJECT  README.md  go.mod  main.go
algebraic-operator/api/v1alpha1/: composedresource_types.go  groupversion_info.go  zz_generated.deepcopy.go
algebraic-operator/config/crd/: kustomization.yaml
algebraic-operator/config/default/: kustomization.yaml
algebraic-operator/config/manager/: controller_manager_config.yaml
algebraic-operator/config/rbac/: composedresource_editor_role.yaml  composedresource_viewer_role.yaml
algebraic-operator/config/samples/: kustomization.yaml  meta_v1alpha1_composedresource.yaml
algebraic-operator/controllers/: composedresource_controller.go  suite_test.go
gerbil-scheme/: Dockerfile  Makefile  gerbil.pkg
gerbil-scheme/src/: entrypoint.ss
grump/: README.md  go.mod  go.sum
grump/cmd/rendertest/: main.go
grump/internal/: rendering.go
grump/rendering/: markdown.go  mdx.go  meta.go  mustache.go
grump/templates/: components.templ  components_templ.go  errors.templ  errors_templ.go  simple.md  simple.mdx  simple.templ  simple_templ.go
multimodal-ai/: .gitignore  NOTES.qmd  README.md  app.py  main.py  pyproject.toml  shell.nix
multimodal-ai/src/: lite.py  main.py  oai.py  vid.py
paperclips/: paperclips.js
pdf-mint/: README.md  pyproject.toml
pdf-mint/pdf_mint/: __init__.py  __main__.py  mint.py  templating.py
pil-logo/: README.md
rust/: Cargo.toml  Dockerfile
rust-fwd-auth/: Cargo.toml  README.md
rust-fwd-auth/src/: main.rs
rust-fwd-auth/static/: index.html
rust/src/: metrics.rs
sound-visualiser/: README.md  vis.py
sterile.js/: README.md  package-lock.json  package.json  sterile.js
sterile.js/test/: sterile.test.js
tina-cms-barebones/: package-lock.json  package.json
tina-cms-barebones/app/: layout.tsx
tina-cms-barebones/tina/: tina-lock.json
typed-data-language/: README.md
web-chat/: Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum
web-chat/chatroom/: channel.go  chatroom.go  client.go  messages.go
web-chat/public/: chat.js  custom.css  index.html  namedata.json
web-graph/: .eslintrc.cjs  README.md  package-lock.json  package.json
web-graph/src/: App.vue
(+21 files in other folders)
