[tool.poetry]
name = "pdf-mint"
version = "0.1.0"
description = ""
authors = ["Brice Fernandes <brice@fractallambda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
weasyprint = "^62.1"
typer = "^0.12.3"
chevron = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
