[package]
name = "testaroo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
clap = "3.1.0"
prometheus = { version = "0.13.0", features = ["process"]}
lazy_static = "1.4.0"